# local-secrets

./: .gitignore  AGENTS.md  CHANGELOG.md  CI-CD.md  CONTRIBUTING.md  Cargo.toml  LLM_API_REFERENCE.md  PROJECT.md  README.md  ci-local.ps1  ci-local.sh
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  release.yml
src/: backend.rs  commands.rs  main.rs  security.rs
tests/: automated_store_tests.rs  cli.rs  keyring_integration_tests.rs  memory_backend_security_test.rs  security_tests.rs  security_validation_tests.rs  store_automation_tests.rs
