[package]
name = "local-secrets"
version = "0.1.0"
edition = "2021"
authors = ["Local Secrets Contributors"]
description = "Minimalist CLI to store secrets in your OS keyring and inject them into child processes"
license = "GPL-3.0-only"

[features]
test-secret-param = []

[dependencies]
anyhow = { version = "1", default-features = false }
clap = { version = "4.5", features = [
    "derive",
    "std",
], default-features = false }
keyring = { version = "3.6.3", default-features = false }
rpassword = { version = "7", default-features = false }
secrecy = { version = "0.10.3", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
    "std",
] }
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "std",
] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
mimalloc = { version = "0.1.48", features = [
    "secure",
], default-features = false }
regex = "1.11.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.22.0"

# Size optimization profiles
[profile.release]
# Enable all size optimizations
opt-level = "z"   # Optimize for size instead of speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Use single codegen unit for better optimization
panic = "abort"   # Remove panic handling overhead
strip = true      # Remove debug symbols

[profile.release-with-debug]
inherits = "release"
strip = false        # Keep debug symbols for debugging releases
